Update to Angular 18 with experimental zoneless

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,24 +1,24 @@
 // Base
-@import "node_modules/ng-zorro-antd/style/entry.less";
+@import "../node_modules/ng-zorro-antd/style/entry.less";
 
 // Components
-@import "node_modules/ng-zorro-antd/alert/style/entry.less";
-@import "node_modules/ng-zorro-antd/button/style/entry.less";
-@import "node_modules/ng-zorro-antd/checkbox/style/entry.less";
-@import "node_modules/ng-zorro-antd/divider/style/entry.less";
-@import "node_modules/ng-zorro-antd/icon/style/entry.less";
-@import "node_modules/ng-zorro-antd/image/style/entry.less";
-@import "node_modules/ng-zorro-antd/input/style/entry.less";
-@import "node_modules/ng-zorro-antd/modal/style/entry.less";
-@import "node_modules/ng-zorro-antd/notification/style/entry.less";
-@import "node_modules/ng-zorro-antd/select/style/entry.less";
-@import "node_modules/ng-zorro-antd/space/style/entry.less";
-@import "node_modules/ng-zorro-antd/spin/style/entry.less";
-@import "node_modules/ng-zorro-antd/table/style/entry.less";
-@import "node_modules/ng-zorro-antd/typography/style/entry.less";
+@import "../node_modules/ng-zorro-antd/alert/style/entry.less";
+@import "../node_modules/ng-zorro-antd/button/style/entry.less";
+@import "../node_modules/ng-zorro-antd/checkbox/style/entry.less";
+@import "../node_modules/ng-zorro-antd/divider/style/entry.less";
+@import "../node_modules/ng-zorro-antd/icon/style/entry.less";
+@import "../node_modules/ng-zorro-antd/image/style/entry.less";
+@import "../node_modules/ng-zorro-antd/input/style/entry.less";
+@import "../node_modules/ng-zorro-antd/modal/style/entry.less";
+@import "../node_modules/ng-zorro-antd/notification/style/entry.less";
+@import "../node_modules/ng-zorro-antd/select/style/entry.less";
+@import "../node_modules/ng-zorro-antd/space/style/entry.less";
+@import "../node_modules/ng-zorro-antd/spin/style/entry.less";
+@import "../node_modules/ng-zorro-antd/table/style/entry.less";
+@import "../node_modules/ng-zorro-antd/typography/style/entry.less";
 
 // Variables
-@import "node_modules/ng-zorro-antd/style/variable.less";
+@import "../node_modules/ng-zorro-antd/style/variable.less";
 
 // Rewrites
 @border-color-base: hsv(0, 0, 87%);
